# calendar

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: deploy-backend.yml  lint-backend.yml  test-backend.yml
migrations/2023-04-13-212348_initial/: down.sql  up.sql
src/: error.rs  event.rs  lib.rs  main.rs  schema.rs  sqlite_mapping.rs  user.rs  util.rs
types/: Event.ts  PostEvent.ts  PostUser.ts  PutEvent.ts
