[package]
name = "calendar"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
axum = { version = "0.6.4", features = ["query", "headers"] }
tokio = { version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
time = { version = "0.3.17", features = ["parsing"] }
futures = "0.3.25"
utoipa = { version = "3.0.0", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
ts-rs = { version = "6.2.1", features = ["format"] }
diesel = { version = "2.0.3", features = ["sqlite", "time", "returning_clauses_for_sqlite_3_35"] }

diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
bb8 = "0.8.0"
bb8-diesel = { git = "https://github.com/overdrivenpotato/bb8-diesel" }
